<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Maven</string>
    <string name="breitengrad">Latitude/Breitengrad:</string>
    <string name="laengengrad">Longitude/Längengrad:</string>
    <string name="speichernDialogTitel">Speichern</string>
    <string name="keinGPS">Bitte aktivieren Sie ihr GPS!</string>
    <string name="hoehe">Altitude/Höhe:</string>
    <string name="start">Start</string>
    <string name="stopp">Stop</string>
    <string name="speichern">Save</string>
    <string name="getuserlist">Userlist</string>
    <string name="ok">Ok</string>
    <string name="schließen">zurück</string>
    <string name="clear">Clear</string>
    <string name="titel">Generieren des Standortes</string>
    <string name="userlist">Userliste</string>
    <string name="nextlayout">show map</string>
    <string name="title_activity_sek">Map</string>
    <string name="back">back</string>
</resources>
