<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

        <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dip"
                android:layout_marginRight="5dip"
                android:text="@string/titel"
                android:textSize="20dip" >
        </TextView>
    </LinearLayout>
    <TableLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
        <TableRow>
            <TextView
                    android:text="@string/breitengrad"
                    android:layout_column="1"
                    android:id="@+id/textLabelBreite"
                    android:padding="5dip"/>
            <TextView
                    android:text=""
                    android:layout_column="2"
                    android:id="@+id/textViewBreite"
                    android:padding="5dip"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:text="@string/laengengrad"
                    android:layout_column="1"
                    android:id="@+id/textLabelLaenge"
                    android:padding="5dip"/>
            <TextView
                    android:text=""
                    android:layout_column="2"
                    android:id="@+id/textViewLaenge"
                    android:padding="5dip"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:text="@string/hoehe"
                    android:layout_column="1"
                    android:id="@+id/textLabelHoehe"
                    android:padding="5dip"/>
            <TextView
                    android:text=""
                    android:layout_column="2"
                    android:id="@+id/textViewHoehe"
                    android:padding="5dip"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
    </LinearLayout>
    <Button
            android:text="@string/start"
            android:id="@+id/button1"
            android:layout_width="65dp"
            android:layout_height="wrap_content">
    </Button>
    <Button
            android:text="@string/stopp"
            android:id="@+id/button2"
            android:layout_width="65dp"
            android:layout_height="wrap_content">

    </Button>
    <Button
            android:text="@string/speichern"
            android:id="@+id/button3"
            android:layout_width="65dp"
            android:layout_height="wrap_content">
    </Button>
    <Button
            android:text="@string/getuserlist"
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    </Button>
</LinearLayout>
